_footer.scss: changed

--- a/assets/sass/layouts/_footer.scss
+++ b/assets/sass/layouts/_footer.scss
@@ -56,5 +56,5 @@
 
 .site-footer {
     background-color: black;
-    color: ;
+    color: adjust-color($color: #000000, $red: 1, $green: 2, $blue: 3, $hue: 0, $saturation: 0%, $lightness: 0%, $alpha: 1.0);
 }
