--- a/assets/sass/layouts/_header.scss
+++ b/assets/sass/layouts/_header.scss
@@ -4,6 +4,7 @@
 .site-header {
     border-bottom: 1px solid $color-header-border;
     background-color: black;
+    color:white;
 }
 
 .navbar__logo,
