_header.scss: changed

--- a/assets/sass/layouts/_header.scss
+++ b/assets/sass/layouts/_header.scss
@@ -5,7 +5,7 @@
     border-bottom: 1px solid $color-header-border;
     background-color: black;
     color:white;
-    text
+    text-emphasis-color: white;
 }
 
 .navbar__logo,
