footer.html: changed

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -12,6 +12,8 @@
 {{ end }}
 
 <footer class="site-footer">
+
+    <a class="_3-8_ lfloat" href="https://www.facebook.com/klouduser/" target="_blank"><img class="_1drn _-s img" src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.6435-1/cp0/p50x50/89916016_100690391568215_6352029220855611392_n.jpg?_nc_cat=106&amp;ccb=1-5&amp;_nc_sid=dbb9e7&amp;_nc_ohc=KNmhAXK7LrEAX9idcIf&amp;_nc_ht=scontent-ort2-1.xx&amp;edm=ADwHzz8EAAAA&amp;oh=002f0742a8cc984baafd6327d756295e&amp;oe=618E71FE" height="50" width="50" alt=""></a>
 	{{ if or (or (or $has_logo .Site.Params.footer.has_primary_nav) .Site.Params.footer.has_secondary_nav) .Site.Params.footer.has_tertiary_nav }}
 	<div class="site-footer__nav py-5 py-md-6">
         
