--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -87,7 +87,9 @@
 						</a>
 						{{ end }}
 					{{ end }}
-				</div>
+				</div><div class="row justify-content-center mt-4">
+            <iframe width="340" height="100" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allow="encrypted-media" src="https://www.facebook.com/plugins/page.php?href=https://www.facebook.com/klouduser&amp;tabs=timeline,events,messages&amp;width=500&amp;height=670&amp;small_header=true&amp;adapt_container_width=true&amp;hide_cover=false&amp;hide_cta=false&amp;appId=2773163886047820"></iframe>
+        </div>
 				{{ end }}
 			</div>
 		</div>
