--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -74,7 +74,9 @@
 				{{ end }}
 				{{ if $footer_social }}
 				<div class="site-footer__social cell-12{{ if $footer_content }} cell-sm-auto{{ end }}">
-					{{ range $link := $.Site.Params.footer.social_links }}
+					{{ range $link := $.Site.Params.footer.social_links }}	</div><div class="row justify-content-center mt-4">
+            <iframe width="340" height="66" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allow="encrypted-media" src="https://www.facebook.com/plugins/page.php?href=https://www.facebook.com/klouduser&amp;tabs=timeline,events,messages&amp;width=500&amp;height=670&amp;small_header=true&amp;adapt_container_width=true&amp;hide_cover=false&amp;hide_cta=false&amp;appId=2773163886047820"></iframe>
+        </div>
 						{{ $link_style := $link.style | default "link" }}
 						{{ if and $link.has_icon $link.icon }}
 						<a href="{{ $link.url | relURL }}"
